--- a/Tray/src/main/res/layout/fragment_net_banking_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_net_banking_bottom_sheet.xml
@@ -268,20 +268,19 @@
                                 app:layout_constraintHorizontal_bias="0.0"
                                 app:layout_constraintStart_toStartOf="parent">
 
-                                <ProgressBar
-                                    android:id="@+id/loading_progress_bar"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
+                                <com.airbnb.lottie.LottieAnimationView
+                                    android:id="@+id/boxPayLogoLottieAnimation"
+                                    android:layout_width="50dp"
+                                    android:layout_height="50dp"
                                     android:layout_centerInParent="true"
-                                    android:indeterminateTint="#0D8EFF"
-                                    app:layout_constraintBottom_toBottomOf="parent"
-                                    app:layout_constraintEnd_toEndOf="parent"
-                                    app:layout_constraintStart_toStartOf="parent" />
+                                    app:lottie_autoPlay="true"
+                                    app:lottie_fileName="complete_json.json"
+                                    app:lottie_loop="true" />
 
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_below="@+id/loading_progress_bar"
+                                    android:layout_below="@+id/boxPayLogoLottieAnimation"
                                     android:layout_centerInParent="true"
                                     android:layout_marginTop="8dp"
                                     android:fontFamily="@font/poppins"
