--- a/Tray/src/main/res/layout/fragment_payment_successful_with_details_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_payment_successful_with_details_bottom_sheet.xml
@@ -180,7 +180,7 @@
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
                         android:fontFamily="@font/poppins_semibold"
-                        android:text="Go back"
+                        android:text="Proceed"
                         android:textColor="#FFFFFF"
                         android:textSize="16sp" />
                 </RelativeLayout>
