--- a/Tray/src/main/res/layout/fragment_u_p_i_timer_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_u_p_i_timer_bottom_sheet.xml
@@ -44,6 +44,53 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView" />
 
+            <androidx.cardview.widget.CardView
+                android:id="@+id/UPIID_CardView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:background="#FFFFFF"
+                android:elevation="0dp"
+                app:cardCornerRadius="42dp"
+                app:layout_constraintEnd_toEndOf="@+id/textView11"
+                app:layout_constraintStart_toStartOf="@+id/textView11"
+                app:layout_constraintTop_toBottomOf="@+id/textView11">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/upi_timer_id_field_bg"
+                    android:paddingStart="20dp"
+                    android:paddingTop="6dp"
+                    android:paddingEnd="20dp"
+                    android:paddingBottom="6dp">
+
+                    <ImageView
+                        android:id="@+id/upiTimerUPIIcon"
+                        android:layout_width="14dp"
+                        android:layout_height="14dp"
+                        android:src="@drawable/upi_icon_2"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/UPIIDTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="4dp"
+                        android:layout_marginTop="3dp"
+                        android:fontFamily="@font/poppins"
+                        android:text=""
+                        android:textColor="#2D2B32"
+                        android:textSize="14sp"
+                        app:layout_constraintBottom_toBottomOf="@+id/upiTimerUPIIcon"
+                        app:layout_constraintStart_toEndOf="@+id/upiTimerUPIIcon"
+                        app:layout_constraintTop_toTopOf="@+id/upiTimerUPIIcon" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraintLayout"
                 android:layout_width="200dp"
@@ -112,7 +159,7 @@
                 android:textColor=" #1A8BEE"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView11" />
+                app:layout_constraintTop_toBottomOf="@+id/UPIID_CardView" />
 
             <TextView
                 android:id="@+id/textView10"
@@ -142,6 +189,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView10" />
+
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
