--- a/Tray/src/main/res/layout/fragment_u_p_i_timer_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_u_p_i_timer_bottom_sheet.xml
@@ -174,22 +174,66 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
-            <TextView
-                android:id="@+id/cancelPaymentTextView"
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
-                android:layout_marginBottom="24dp"
-                android:fontFamily="@font/poppins_semibold"
+                android:layout_height="50dp"
+                android:orientation="horizontal"
                 android:gravity="center"
-                android:text="Cancel payment"
-                android:textColor="#0D8EFF"
-                android:textSize="16sp"
+                android:layout_marginBottom="16dp"
+                android:layout_marginTop="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView10" />
+                app:layout_constraintTop_toBottomOf="@+id/textView10">
 
+                <TextView
+                    android:id="@+id/cancelPaymentTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:gravity="center"
+                    android:text="Cancel payment"
+                    android:textColor="#0D8EFF"
+                    android:textSize="16sp" />
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/proceedButton"
+                    android:layout_width="180dp"
+                    android:layout_height="50dp"
+                    android:clickable="true"
+                    android:elevation="0dp"
+                    app:cardCornerRadius="7dp"
+                    android:visibility="gone">
+
+                    <RelativeLayout
+                        android:id="@+id/proceedButtonRelativeLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/button_bg"
+                        android:padding="12dp"
+                        app:layout_constraintBottom_toBottomOf="@+id/cancelPaymentTextView">
+                        <ProgressBar
+                            android:id="@+id/progressBar"
+                            android:layout_width="15dp"
+                            android:layout_height="15dp"
+                            android:layout_centerInParent="true"
+                            android:indeterminateDrawable="@drawable/loader_01"
+                            android:rotation="90"
+                            android:visibility="gone"/>
+
+                        <TextView
+                            android:id="@+id/textView6"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:fontFamily="@font/poppins_semibold"
+                            android:text="Retry Payment"
+                            android:textColor="#FFFFFF"
+                            android:textSize="16sp" />
+
+                    </RelativeLayout>
+                </androidx.cardview.widget.CardView>
+            </LinearLayout>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
