--- a/Tray/src/main/res/layout/fragment_u_p_i_timer_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_u_p_i_timer_bottom_sheet.xml
@@ -197,7 +197,7 @@
                     android:textSize="16sp" />
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/proceedButton"
+                    android:id="@+id/retryButton"
                     android:layout_width="180dp"
                     android:layout_height="50dp"
                     android:clickable="true"
