--- a/app/src/main/res/layout/activity_success_screen.xml
+++ b/app/src/main/res/layout/activity_success_screen.xml
@@ -7,7 +7,7 @@
     tools:context=".SuccessScreen">
 
     <TextView
-        android:id="@+id/textView22"
+        android:id="@+id/tooltip_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="169dp"
