--- a/Tray/src/main/res/layout/fragment_wallet_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_wallet_bottom_sheet.xml
@@ -32,15 +32,21 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <LinearLayout
+                android:id="@+id/backButton"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:orientation="vertical"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="15dp"
-                android:src="@drawable/chevron_left"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:gravity="center">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/chevron_left" />
+            </LinearLayout>
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView"
