--- a/Tray/src/main/res/layout/fragment_net_banking_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_net_banking_bottom_sheet.xml
@@ -144,13 +144,13 @@
                                     android:id="@+id/popularBanksConstraintLayout1"
                                     android:layout_width="wrap_content"
                                     android:layout_height="match_parent"
-                                    android:layout_marginEnd="16dp"
-                                    android:background="@drawable/loading_state">
+                                    android:layout_marginEnd="16dp">
 
                                     <RelativeLayout
+                                        android:id="@+id/popularBanksRelativeLayout1"
                                         android:layout_width="50dp"
                                         android:layout_height="50dp"
-                                        android:background="@drawable/popular_item_unselected_bg"
+                                        android:background="@drawable/loading_state"
                                         app:layout_constraintBottom_toBottomOf="parent"
                                         app:layout_constraintEnd_toEndOf="parent"
                                         app:layout_constraintStart_toStartOf="parent"
@@ -165,6 +165,21 @@
                                             app:layout_constraintStart_toStartOf="parent"
                                             app:layout_constraintTop_toTopOf="parent" />
                                     </RelativeLayout>
+                                    <TextView
+                                        android:id="@+id/popularBanksNameTextView1"
+                                        android:layout_width="60dp"
+                                        android:layout_height="wrap_content"
+                                        android:gravity="center"
+                                        android:maxLines="1"
+                                        android:ellipsize="end"
+                                        android:textColor="#383838"
+                                        android:textSize="12sp"
+                                        android:fontFamily="@font/poppins"
+                                        android:text="Popular Bank Name"
+                                        app:layout_constraintBottom_toBottomOf="parent"
+                                        app:layout_constraintEnd_toEndOf="parent"
+                                        app:layout_constraintStart_toStartOf="parent"
+                                        app:layout_constraintTop_toBottomOf="@+id/popularBanksRelativeLayout1"/>
 
                                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -173,12 +188,13 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="match_parent"
                                     android:layout_marginEnd="16dp"
-                                    android:background="@drawable/loading_state">
+                                    >
 
                                     <RelativeLayout
+                                        android:id="@+id/popularBanksRelativeLayout2"
                                         android:layout_width="50dp"
                                         android:layout_height="50dp"
-                                        android:background="@drawable/popular_item_unselected_bg"
+                                        android:background="@drawable/loading_state"
                                         app:layout_constraintBottom_toBottomOf="parent"
                                         app:layout_constraintEnd_toEndOf="parent"
                                         app:layout_constraintStart_toStartOf="parent"
@@ -193,6 +209,21 @@
                                             app:layout_constraintStart_toStartOf="parent"
                                             app:layout_constraintTop_toTopOf="parent" />
                                     </RelativeLayout>
+                                    <TextView
+                                        android:id="@+id/popularBanksNameTextView2"
+                                        android:layout_width="60dp"
+                                        android:layout_height="wrap_content"
+                                        android:gravity="center"
+                                        android:maxLines="1"
+                                        android:ellipsize="end"
+                                        android:textColor="#383838"
+                                        android:textSize="12sp"
+                                        android:fontFamily="@font/poppins"
+                                        android:text="Popular Bank Name"
+                                        app:layout_constraintBottom_toBottomOf="parent"
+                                        app:layout_constraintEnd_toEndOf="parent"
+                                        app:layout_constraintStart_toStartOf="parent"
+                                        app:layout_constraintTop_toBottomOf="@+id/popularBanksRelativeLayout2"/>
 
                                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -200,13 +231,13 @@
                                     android:id="@+id/popularBanksConstraintLayout3"
                                     android:layout_width="wrap_content"
                                     android:layout_height="match_parent"
-                                    android:layout_marginEnd="16dp"
-                                    android:background="@drawable/loading_state">
+                                    android:layout_marginEnd="16dp">
 
                                     <RelativeLayout
+                                        android:id="@+id/popularBanksRelativeLayout3"
                                         android:layout_width="50dp"
                                         android:layout_height="50dp"
-                                        android:background="@drawable/popular_item_unselected_bg"
+                                        android:background="@drawable/loading_state"
                                         app:layout_constraintBottom_toBottomOf="parent"
                                         app:layout_constraintEnd_toEndOf="parent"
                                         app:layout_constraintStart_toStartOf="parent"
@@ -221,6 +252,21 @@
                                             app:layout_constraintStart_toStartOf="parent"
                                             app:layout_constraintTop_toTopOf="parent" />
                                     </RelativeLayout>
+                                    <TextView
+                                        android:id="@+id/popularBanksNameTextView3"
+                                        android:layout_width="60dp"
+                                        android:layout_height="wrap_content"
+                                        android:gravity="center"
+                                        android:maxLines="1"
+                                        android:ellipsize="end"
+                                        android:textColor="#383838"
+                                        android:textSize="12sp"
+                                        android:fontFamily="@font/poppins"
+                                        android:text="Popular Bank Name"
+                                        app:layout_constraintBottom_toBottomOf="parent"
+                                        app:layout_constraintEnd_toEndOf="parent"
+                                        app:layout_constraintStart_toStartOf="parent"
+                                        app:layout_constraintTop_toBottomOf="@+id/popularBanksRelativeLayout3"/>
 
                                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -228,13 +274,13 @@
                                     android:id="@+id/popularBanksConstraintLayout4"
                                     android:layout_width="wrap_content"
                                     android:layout_height="match_parent"
-                                    android:layout_marginEnd="16dp"
-                                    android:background="@drawable/loading_state">
+                                    android:layout_marginEnd="16dp">
 
                                     <RelativeLayout
+                                        android:id="@+id/popularBanksRelativeLayout4"
                                         android:layout_width="50dp"
                                         android:layout_height="50dp"
-                                        android:background="@drawable/popular_item_unselected_bg"
+                                        android:background="@drawable/loading_state"
                                         app:layout_constraintBottom_toBottomOf="parent"
                                         app:layout_constraintEnd_toEndOf="parent"
                                         app:layout_constraintStart_toStartOf="parent"
@@ -246,6 +292,23 @@
                                             android:layout_height="wrap_content"
                                             android:layout_centerInParent="true" />
                                     </RelativeLayout>
+
+
+                                        <TextView
+                                            android:id="@+id/popularBanksNameTextView4"
+                                            android:layout_width="60dp"
+                                            android:layout_height="wrap_content"
+                                            android:gravity="center"
+                                            android:maxLines="1"
+                                            android:ellipsize="end"
+                                            android:textColor="#383838"
+                                            android:textSize="12sp"
+                                            android:fontFamily="@font/poppins"
+                                            android:text="Popular Bank Name"
+                                            app:layout_constraintBottom_toBottomOf="parent"
+                                            app:layout_constraintEnd_toEndOf="parent"
+                                            app:layout_constraintStart_toStartOf="parent"
+                                            app:layout_constraintTop_toBottomOf="@+id/popularBanksRelativeLayout4"/>
 
                                 </androidx.constraintlayout.widget.ConstraintLayout>
 
